--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,4 +1,7 @@
 <ion-content [fullscreen]="true">
+  <ion-header>
+    <ion-title>Ver Mais Tarde</ion-title>
+  </ion-header>
   <ion-list>
     <ion-item *ngFor="let filme of filmesVerMaisTarde">
       <ion-thumbnail slot="start">
