--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,8 @@
 @import "@ionic/angular/css/flex-utils.css";
 
 :root{
-  --gradiente: linear-gradient(to bottom, #000000, #91C6FC);
+  //--gradiente: linear-gradient(to bottom, #000000, #91C6FC);
+  --gradiente: linear-gradient(153.21deg, #000000 1.34%, #6E96BE 96.21%, #91C6FC 96.22%);
 }
 
 ion-content {
