--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,5 +1,5 @@
 <ion-content [fullscreen]="true">
-  <ion-header>
+  <ion-header class="roundHeader">
     <ion-title>Ver Mais Tarde</ion-title>
   </ion-header>
   <ion-list>
