--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,7 +3,7 @@
     <ion-text class="total-movies">
       Total Movies
     </ion-text>
-    <ion-button color="danger" id="logOutButton">Log Out</ion-button>
+    <ion-button color="danger" id="logOutButton" routerLink="/login">Log Out</ion-button>
     <ion-buttons slot="end">
       <ion-icon name="search-outline" class="search-icon" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
