--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,12 +3,12 @@
     <ion-text class="total-movies">
       Total Movies
     </ion-text>
-    <ion-button color="danger" id="logOutButton" routerLink="/login">Log Out</ion-button>
     <ion-buttons slot="end">
       <ion-icon name="search-outline" class="search-icon" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
       <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
       <ion-icon name="settings-outline" class="other-icons"></ion-icon>
+      <ion-icon color="danger" name="exit-outline" class="exit" (click) = "confirmLogout()" ></ion-icon>
       <img src="src/assets/img/" class="small-image">
       <img src="assets/img/netflix.png" class="small-image">
       <img src="assets/img/hbo.png" class="small-image">
