--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -34,9 +34,18 @@
 .other-icons{
   margin-top: -30px;
   position: relative;
-  left: 200px;
+  left: 210px;
   color: #91C6FC;
   margin-right: 5px;
+}
+
+.exit{
+  margin-top: -30px;
+  position: relative;
+  left: 212px;
+  margin-right: 5px;
+  height: 20px;
+  width: 20px;
 }
 
 .genre{
@@ -94,3 +103,4 @@
   width: 96px;
   height: 16px;
 }
+
