algumas alterações ligeiras

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,8 +15,9 @@
   </div>
 
   <div class="link">  
+
+    Não tens conta? <a routerLink="/signup" class="sign"> Cria uma conta</a>
     <br>
-    Não tens conta? <a routerLink="/signup"> Cria uma conta</a>
   </div>
   <ion-button type="button" expand="block" shape="round" color="primary" (click)="Login()" class="center" id="loginButton">Login</ion-button>
 </ion-content>
