--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -17,8 +17,8 @@
     <ion-input type="password" name="password" [(ngModel)]="userdata.password" placeholder="Palavra-passe" class="inputCostumization"></ion-input>
   </form>
   <div class="link">
+    Já tens conta? <a routerLink="/login" class="login"> Inicia sessão</a>
     <br>
-    Já tens conta? <a routerLink="/login"> Inicia sessão</a>
   </div>
   <ion-button type="button" expand="block" shape="round" color="primary" (click)="Register()" class="center" id="registerButton">Registar</ion-button>
 
