--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -21,7 +21,7 @@
 
 #registerButton {
     width: 240px;
-    height: 35px;
+    height: 40px;
     margin: 0 auto;
 }
 
@@ -35,4 +35,10 @@
     justify-content: center;
     align-items: center;
     margin: 10px;
+ }
+
+ .login{
+    color: white;
+    position: relative;
+    left: 4px;
  }
