--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -16,4 +16,15 @@
 .ion-margin {
   margin: 10px;
 }
+
+.destaques{
+  color: white;
+  position: relative;
+  left: 50px;
+  font-size: 22px;
+  top: 20px;
+}
+
+
+
  
