--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -25,3 +25,20 @@
     background-color: #91C6FC;
     padding: 20px;
 }
+
+.total-movies {
+    font-size: 16px; 
+    position: relative;
+    top: -15px;
+    left: 5px;
+    color: #91C6FC;
+    white-space: nowrap;
+   }
+
+.vermaistarde{
+    color: white;
+    position: relative;
+    left: 50px;
+    font-size: 22px;
+    top: 20px;
+}
