--- a/src/app/filme/filme.page.html
+++ b/src/app/filme/filme.page.html
@@ -1,10 +1,7 @@
-<ion-header [translucent]="true">
-  <ion-toolbar class="toolbar"> 
-    <ion-icon name="arrow-back-outline" class="back-icon" routerLink="/tabs/tab1"></ion-icon>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
+  <ion-icon name="arrow-back-outline" class="back-icon" routerLink="/tabs/tab1"></ion-icon>
   <ion-grid class="ion-margin" *ngIf="movie">
     <ion-row>
       <ion-col size="12">
@@ -34,7 +31,7 @@
     <br>
     <ion-text class="genre info">{{ movie.genre }}</ion-text>
     <br>
-    <ion-text class="sinopse info">Sinopse:</ion-text>
+    <ion-text class="sinopse info">Sinopse</ion-text>
     <br>
     <ion-text class="synopsis info">{{ movie.synopsis }}</ion-text>
     <br>
