--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -14,7 +14,7 @@
 
 #loginButton {
     width: 240px;
-    height: 35px;
+    height: 40px;
     margin: 0 auto;
 }
 
@@ -35,4 +35,10 @@
     justify-content: center;
     align-items: center;
     margin: 10px;
+ }
+
+ .sign{
+    color: white;
+    position: relative;
+    left: 4px;
  }
