--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,18 +9,18 @@
       <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
       <ion-icon name="settings-outline" class="other-icons"></ion-icon>
       <ion-icon color="danger" name="exit-outline" class="exit" (click) = "confirmLogout()" ></ion-icon>
-      <img src="src/assets/img/" class="small-image">
+      <img src="assets/img/tudo.jpg/" class="small-image">
       <img src="assets/img/netflix.png" class="small-image">
       <img src="assets/img/hbo.png" class="small-image">
       <img src="assets/img/disney+.png" class="small-image">
       <img src="assets/img/primevideo.png" class="small-image">
-      <img src="assets/img/.png" class="small-image">
+      <img src="assets/img/plus.png" class="small-image">
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-text class="username">Bem-vindo, {{ username }}</ion-text> <!-- Exibe "Bem-vindo" junto com o username -->
+  <ion-text class="username">Bem-vindo, {{ username }}</ion-text> 
   <ion-grid>
     <ion-row>
       <ion-col size="3" *ngFor="let movie of dataMovies" class="ion-margin">
