--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,42 +1,8 @@
-.small-image {
-    width: 25px;
-    height: 25px;
-    object-fit: cover;
-    margin-right: 10px;
-    border-radius: 5px;
-    margin-top: 45px;
-    position: relative;
-    right: 140px;
-    
-}
-
-.total-movies {
-  font-size: 16px; 
-  position: relative;
-  top: -15px;
-  left: 5px;
-  color: #91C6FC;
-  white-space: nowrap;
- }
-
-.toolbar {
-  --background: #000000 ;
-  height: 120px;
-}
-
-.search-icon{
+ .search-icon{
   margin-top: -30px;
   position: relative;
-  left: 10px;
+  left: 35px;
   color: #91C6FC;
-}
-
-.other-icons{
-  margin-top: -30px;
-  position: relative;
-  left: 210px;
-  color: #91C6FC;
-  margin-right: 5px;
 }
 
 .exit{
@@ -77,7 +43,7 @@
 }
 
 .username{
-  color: azure;
+  color: white;
   position: relative;
   left: 50px;
   font-size: 22px;
