--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,12 +1,25 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Destaques
-    </ion-title>
+  <ion-toolbar class="toolbar">
+    <ion-text class="total-movies">
+      Total Movies
+    </ion-text>
+    <ion-buttons slot="end">
+      <ion-icon name="search-outline" class="search_pages" routerLink="/pesquisa"></ion-icon>
+      <ion-icon name="person-outline" class="other-icons"></ion-icon>
+      <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
+      <ion-icon name="settings-outline" class="other-icons"></ion-icon>
+      <img src="assets/img/tudo.jpg/" class="small-image">
+      <img src="assets/img/netflix.png" class="small-image">
+      <img src="assets/img/hbo.png" class="small-image">
+      <img src="assets/img/disney+.png" class="small-image">
+      <img src="assets/img/primevideo.png" class="small-image">
+      <img src="assets/img/plus.png" class="small-image">
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-text class="destaques">Destaques</ion-text>
   <ion-grid>
     <ion-row>
       <ion-col size="3" *ngFor="let movie of dataMovies" class="ion-margin">
