--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -1,9 +1,23 @@
 <ion-header [translucent]="true">
-  <ion-toolbar class="toolbar"> 
-    <ion-icon name="search-outline" class="search-icon"></ion-icon>
-      <input type="text" placeholder="Busca por filmes, séries..." class ="barra_pesquisa">
+  <ion-toolbar class="toolbar" color="primary">
+    <ion-text class="total-movies">
+      Total Movies
+    </ion-text>
+    <ion-buttons slot="end">
+      <ion-icon name="search-outline" class="search_pages" routerLink="/pesquisa"></ion-icon>
+      <ion-icon name="person-outline" class="other-icons"></ion-icon>
+      <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
+      <ion-icon name="settings-outline" class="other-icons"></ion-icon>
+      <img src="assets/img/tudo.jpg/" class="small-image">
+      <img src="assets/img/netflix.png" class="small-image">
+      <img src="assets/img/hbo.png" class="small-image">
+      <img src="assets/img/disney+.png" class="small-image">
+      <img src="assets/img/primevideo.png" class="small-image">
+      <img src="assets/img/plus.png" class="small-image">
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-fab>
   <ion-fab-button class="createPost">
@@ -12,6 +26,8 @@
 </ion-fab>
 
 <ion-content class = "ionContentColor">
+  <ion-icon name="search-outline" class="search"></ion-icon>
+  <input type="text" placeholder="Busca por filmes, séries..." class ="barra_pesquisa">
   <ion-grid>
     <ion-row>
       <ion-col size="12">
