--- a/src/global.scss
+++ b/src/global.scss
@@ -38,3 +38,51 @@ ion-content {
     --background: var(--gradiente);
   }
 
+.toolbar{
+  --background: #000000 ;
+  height: 120px;
+}
+
+.small-image {
+  width: 25px;
+  height: 25px;
+  object-fit: cover;
+  margin-right: 10px;
+  border-radius: 5px;
+  margin-top: 65px;
+  position: relative;
+  right: 140px;  
+}
+
+.search_pages{
+  margin-top: -30px;
+  position: relative;
+  left: 10px;
+  color: #91C6FC;
+}
+
+.other-icons{
+  margin-top: -30px;
+  position: relative;
+  left: 210px;
+  color: #91C6FC;
+  margin-right: 5px;
+}
+
+.total-movies {
+  font-size: 16px; 
+  position: relative;
+  top: -15px;
+  left: 5px;
+  color: #91C6FC;
+  white-space: nowrap;
+ }
+
+ .back-icon{
+  position: relative;
+  width: 30px;
+  height: 30px;
+  left: 20px;
+  top: 20px;
+  color: white;
+}
