--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -1,4 +1,4 @@
-.capa{
+.capa {
     width: 120px;
     height: 160px;
     margin-top: 0px;
@@ -7,12 +7,12 @@
     margin-left: 10px;
 }
 
-.titulo{
+.titulo {
     color: black;
     font-size: 20px;
 }
 
-.trash{
+.trash {
     color: red;
 }
 
@@ -27,18 +27,19 @@
 }
 
 .total-movies {
-    font-size: 16px; 
+    font-size: 16px;
     position: relative;
     top: -15px;
     left: 5px;
     color: #91C6FC;
     white-space: nowrap;
-   }
+}
 
-.vermaistarde{
+.verMaisTardeTitulo {
     color: white;
     position: relative;
     left: 50px;
     font-size: 22px;
     top: 20px;
+    margin-bottom: 10px;
 }
