--- a/src/app/pesquisa/pesquisa.page.scss
+++ b/src/app/pesquisa/pesquisa.page.scss
@@ -35,12 +35,13 @@
     font-size: 12px;
 }
 
-.back-icon{
+.backicon{
     position: relative;
     left: -260px;
     color: #91C6FC;
     width: 24px;
     height: 24px;
+    top: 0px;
 }
 
 input.barra_pesquisa {
