--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -1,8 +1,6 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar class="toolbar" color="primary">
-    <ion-text class="total-movies">
-      Total Movies
-    </ion-text>
+    <app-logo class="logo"></app-logo>
     <ion-buttons slot="end">
       <ion-icon name="search-outline" class="search_pages" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
@@ -25,13 +23,13 @@
   </ion-fab-button>
 </ion-fab>
 
-<ion-content class = "ionContentColor">
+<ion-content class="ionContentColor">
   <ion-icon name="search-outline" class="search"></ion-icon>
-  <input type="text" placeholder="Busca por filmes, séries..." class ="barra_pesquisa">
+  <input type="text" placeholder="Busca por filmes, séries..." class="barra_pesquisa">
   <ion-grid>
     <ion-row>
       <ion-col size="12">
-        <ion-card *ngFor="let post of posts"  (click)="redirecionarPost(post)" class="postCards">
+        <ion-card *ngFor="let post of posts" (click)="redirecionarPost(post)" class="postCards">
           <ion-card-header>
             <ion-card-title>{{ post.postTitle }}</ion-card-title>
             <ion-card-subtitle>{{ post.postCreator }} - {{post.postDate}}</ion-card-subtitle>
