--- a/src/global.scss
+++ b/src/global.scss
@@ -86,3 +86,12 @@ ion-content {
   top: 20px;
   color: white;
 }
+
+.logo{
+    font-size: 16px;
+    position: relative;
+    top: -12px;
+    left: 5px;
+    color: #91C6FC;
+    white-space: nowrap;
+}
