--- a/src/app/filme/filme.page.html
+++ b/src/app/filme/filme.page.html
@@ -1,12 +1,12 @@
 
 
 <ion-content [fullscreen]="true">
-  <ion-icon name="arrow-back-outline" class="back-icon" routerLink="/tabs/tab1"></ion-icon>
+  <ion-icon name="arrow-back-outline" class="back-icon" (click) ="voltar()"></ion-icon>
   <ion-grid class="ion-margin" *ngIf="movie">
     <ion-row>
       <ion-col size="12">
         <ion-card button="true">
-          <img [src]="movie.big_img">
+          <img [src]="movie.big_img" >
         </ion-card>
       </ion-col>
     </ion-row>
