--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,13 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbar">
-    <ion-text class="total-movies">
-      Total Movies
-    </ion-text>
+    <app-logo class="logo"></app-logo>
     <ion-buttons slot="end">
       <ion-icon name="search-outline" class="search-icon" routerLink="/pesquisa"></ion-icon>
-      <ion-icon name="person-outline" class="other-icons"></ion-icon>
-      <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
-      <ion-icon name="settings-outline" class="other-icons"></ion-icon>
+      <ion-icon name="person-outline" class="icons"></ion-icon>
+      <ion-icon name="notifications-outline" class="icons"></ion-icon>
+      <ion-icon name="settings-outline" class="icons"></ion-icon>
       <ion-icon color="danger" name="exit-outline" class="exit" (click) = "confirmLogout()" ></ion-icon>
       <img src="assets/img/tudo.jpg/" class="small-image">
       <img src="assets/img/netflix.png" class="small-image">
@@ -20,14 +18,26 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-text class="username">Bem-vindo, {{ username }}</ion-text> 
-  <ion-grid>
-    <ion-row>
-      <ion-col size="3" *ngFor="let movie of dataMovies" class="ion-margin">
-        <ion-card button="true" class="capa" (click)="redirecionarFilme(movie)">
-          <img [src]="movie.img" class="button">
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-text class="username">Bem-vindo, {{ username }}</ion-text>
+  <br><br><br><br>
+  <div class="scroll-container">
+    <ion-grid>
+      <ng-container *ngFor="let genreGroup of groupedMovies">
+        <ion-row class="scroll-row">
+          <ion-col size="auto" class="genre">
+            {{ genreGroup.genre }}
+          </ion-col>    
+          <div class="movie-container">
+            <ng-container *ngFor="let movie of genreGroup.movies">
+              <ion-col size="auto">
+                <ion-card button="true" class="capa" (click)="redirecionarFilme(movie)">
+                  <img [src]="movie.img" class="button">
+                </ion-card>
+              </ion-col>
+            </ng-container>
+          </div>
+        </ion-row>
+      </ng-container>
+    </ion-grid>
+  </div>
 </ion-content>
