--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbar">
-    <ion-text class="total-movies">
-      Total Movies
-    </ion-text>
+    <app-logo class="logo"></app-logo>
     <ion-buttons slot="end">
       <ion-icon name="search-outline" class="search_pages" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
@@ -18,22 +16,25 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-header>
+  <div class="verMaisTardeTituloContainer">
+    <div class="verMaisTardeTitulo">
+      <ion-text id="titulo">Ver Mais Tarde</ion-text>
+    </div>
+  </div>
+</ion-header>
+
 <ion-content [fullscreen]="true">
-  <div class="verMaisTardeTitulo">
-    <ion-text>Ver mais tarde</ion-text>
-  </div>
-  <div class="listaVerMaisTarde">
-    <ion-list>
-      <ion-item *ngFor="let filme of filmesVerMaisTarde">
-        <ion-thumbnail slot="start">
-          <img [src]="filme.imagem" alt="Capa do Filme">
-        </ion-thumbnail>
-        <ion-label>
-          <h2>{{ filme.tituloYear }}</h2>
-          <p>{{ filme.username }}</p>
-        </ion-label>
-        <ion-icon name="trash-outline" class="trash" (click)="removerFilme(filme)"></ion-icon>
-      </ion-item>
-    </ion-list>
-  </div>
+  <ion-list>
+    <ion-item *ngFor="let filme of filmesVerMaisTarde" class="verMaisTardeLista">
+      <ion-thumbnail slot="start">
+        <img [src]="filme.imagem" alt="Capa do Filme" (click)="redirecionarFilme(filme)">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ filme.tituloYear }}</h2>
+        <p>{{ filme.username }}</p>
+      </ion-label>
+      <ion-icon name="trash-outline" class="trash" (click)="removerFilme(filme)"></ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
