--- a/src/app/forum/forum.page.scss
+++ b/src/app/forum/forum.page.scss
@@ -10,23 +10,23 @@
 .comment{
     margin-top: 30px;
     position: fixed;
-    left: 310px;
+    left: 80%;
     color: black;
     width: 24px;
     height: 24px;
-    top: 757px;
+    top: 89.5%;
     z-index: 1;
 }
 
 .barra_comentario {
     position: fixed;
-    left: 40px;
-    width: 300px;
+    left: 10%;
+    width: 80%;
     background-color: #6E96BE;
     max-width: 100%;
     height: 40px;
     border-radius: 20px;
-    top: 780px;
+    top: 93%;
     font-size: 12px;
 }
 
