--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbar">
-    <app-logo class="logo"></app-logo>
+    <ion-text class="total-movies">Total Movies</ion-text>
     <ion-buttons slot="end">
       <ion-icon name="search-outline" class="search-icon" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="icons"></ion-icon>
