--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="toolbar" color="primary">
-    <app-logo class="logo"></app-logo>
+    <ion-text class="total-movies">Total Movies</ion-text>
     <ion-buttons slot="end">
       <ion-icon name="search-outline" class="search_pages" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
@@ -25,7 +25,7 @@
 
 <ion-content class="ionContentColor">
   <ion-icon name="search-outline" class="search"></ion-icon>
-  <input type="text" placeholder="Busca por filmes, séries..." class="barra_pesquisa">
+  <input type="text" placeholder="Busca por filmes, séries..." class="barra_pesquisa" [(ngModel)]="searchQuery" (input)="filterPosts()">
   <ion-grid>
     <ion-row>
       <ion-col size="12">
