--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
       <ion-icon name="notifications-outline" class="icons"></ion-icon>
       <ion-icon name="settings-outline" class="icons"></ion-icon>
       <ion-icon color="danger" name="exit-outline" class="exit" (click) = "confirmLogout()" ></ion-icon>
-      <img src="assets/img/tudo.jpg/" class="small-image">
+      <img src="assets/img/all.jpg/" class="small-image">
       <img src="assets/img/netflix.png" class="small-image">
       <img src="assets/img/hbo.png" class="small-image">
       <img src="assets/img/disney+.png" class="small-image">
