--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -6,7 +6,7 @@
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
       <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
       <ion-icon name="settings-outline" class="other-icons"></ion-icon>
-      <img src="assets/img/tudo.jpg/" class="small-image">
+      <img src="assets/img/all.jpg/" class="small-image">
       <img src="assets/img/netflix.png" class="small-image">
       <img src="assets/img/hbo.png" class="small-image">
       <img src="assets/img/disney+.png" class="small-image">
