botao de forum corrigido trailers retirados posts

--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -24,12 +24,12 @@ input.barra_pesquisa {
 }
 
 .createPost {
-    position: relative;
+    position: fixed;
     --background: #b7f399;
     --background-activated: #87d361;
     --color: black;
-    top: 724px;
-    left: 320px;
+    top: 91%;
+    left: 80%;
 }
 
 .postCards {
