--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="toolbar">
     <ion-text class="total-movies">Total Movies</ion-text>
     <ion-buttons slot="end">
-      <ion-icon name="search-outline" class="search-icon" routerLink="/pesquisa"></ion-icon>
+      <ion-icon name="search-outline" class="search_pages" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="icons"></ion-icon>
       <ion-icon name="notifications-outline" class="icons"></ion-icon>
       <ion-icon name="settings-outline" class="icons"></ion-icon>
