--- a/src/global.scss
+++ b/src/global.scss
@@ -57,7 +57,7 @@ ion-content {
 .search_pages{
   margin-top: -30px;
   position: relative;
-  left: 43px;
+  left: 20%;
   color: #91C6FC;
   width: 22px;
   height: 22px;
